syntax = "proto3";
package proto;

option go_package = "protocol/";

message TransportBundle {
  repeated Ny Packets = 1;
}

message Ny {
  message Update {
    Source Source = 1;
    uint32 Metric = 2;
    bool SeqnoPush = 3;
  }

  message Source {
    string Id = 1;
    uint32 Seqno = 2;
  }

  message Probe {
    uint64 Token = 1;
    optional uint64 ResponseToken = 2;
  }

  oneof type {
    Update RouteOp = 1;
    Source SeqnoRequestOp = 2;
    Probe ProbeOp = 3;
  }
}